moved gl_handler into its own app

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,6 +11,16 @@
 				"kind": "build",
 				"isDefault": true
 			}
+		},
+		{
+			"label": "clean",
+			"type": "shell",
+			"command": "make clean"
+		},
+		{
+			"label": "compile",
+			"type": "shell",
+			"command": "make main"
 		}
 	]
 }
