gave up on make files and just wrote a quick ruby script. Today has been a failure as far as programming goes. Better luck in a week or so with new spirits inshallah

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,14 +1,35 @@
 CXX=c++-7
-CXXFLAGS=-std=c++17 -g
-EXE=shader-handler-test
+CXXFLAGS=-std=c++17
+LINK.o = $(LINK.cc)
 
-main:
-	$(CXX) -o $(EXE) ShaderHandler.test.cpp ../ShaderHandler.cpp
+SRC=$(wildcard *.cpp)
+OBJS=$(SRC:.cpp=.o)
+EXES=$(patsubst %.cpp,%,$(SRC))
+DEPS_TMP=$(patsubst %.test.cpp,%.cpp,$(SRC))
+DEPS=$(patsubst %,../%,$(DEPS_TMP))
+
+
+all:
+	@ruby compile.rb
+
+
+#all: $(EXES)
+
+#objs: $(OBJS)
+	#$(CXX) -o  $^ $(DEPS)
+
+#%.o : $(SRC)
+	#$(CXX) $(CXXFLAGS) -c -o $@ $<
+
+#$(DEPS):
+	#$(CXX) $(CXXFLAGS) -c -o $@ $<
+
+
 
 .PHONY: clean
 clean:
 	@echo "Cleaning..."
-	@rm -f $(OBJS) $(EXE)
-	@rm -rf main.dSYM
+	@rm -f $(OBJS) $(EXES)
+	@rm -rf *.dSYM
 	@echo "Done cleaning"
 
