removed unneeded functionality from FileUtil

--- a/test/Makefile
+++ b/test/Makefile
@@ -150,6 +150,33 @@ FileUtil.test.cpp.s:
 	$(MAKE) -f CMakeFiles/FileUtil.dir/build.make CMakeFiles/FileUtil.dir/FileUtil.test.cpp.s
 .PHONY : FileUtil.test.cpp.s
 
+Users/hasankatie/programming/my_repos/cpp_repos/shape-game-cpp/FileUtil.o: Users/hasankatie/programming/my_repos/cpp_repos/shape-game-cpp/FileUtil.cpp.o
+
+.PHONY : Users/hasankatie/programming/my_repos/cpp_repos/shape-game-cpp/FileUtil.o
+
+# target to build an object file
+Users/hasankatie/programming/my_repos/cpp_repos/shape-game-cpp/FileUtil.cpp.o:
+	$(MAKE) -f CMakeFiles/FileUtil.dir/build.make CMakeFiles/FileUtil.dir/Users/hasankatie/programming/my_repos/cpp_repos/shape-game-cpp/FileUtil.cpp.o
+.PHONY : Users/hasankatie/programming/my_repos/cpp_repos/shape-game-cpp/FileUtil.cpp.o
+
+Users/hasankatie/programming/my_repos/cpp_repos/shape-game-cpp/FileUtil.i: Users/hasankatie/programming/my_repos/cpp_repos/shape-game-cpp/FileUtil.cpp.i
+
+.PHONY : Users/hasankatie/programming/my_repos/cpp_repos/shape-game-cpp/FileUtil.i
+
+# target to preprocess a source file
+Users/hasankatie/programming/my_repos/cpp_repos/shape-game-cpp/FileUtil.cpp.i:
+	$(MAKE) -f CMakeFiles/FileUtil.dir/build.make CMakeFiles/FileUtil.dir/Users/hasankatie/programming/my_repos/cpp_repos/shape-game-cpp/FileUtil.cpp.i
+.PHONY : Users/hasankatie/programming/my_repos/cpp_repos/shape-game-cpp/FileUtil.cpp.i
+
+Users/hasankatie/programming/my_repos/cpp_repos/shape-game-cpp/FileUtil.s: Users/hasankatie/programming/my_repos/cpp_repos/shape-game-cpp/FileUtil.cpp.s
+
+.PHONY : Users/hasankatie/programming/my_repos/cpp_repos/shape-game-cpp/FileUtil.s
+
+# target to generate assembly for a file
+Users/hasankatie/programming/my_repos/cpp_repos/shape-game-cpp/FileUtil.cpp.s:
+	$(MAKE) -f CMakeFiles/FileUtil.dir/build.make CMakeFiles/FileUtil.dir/Users/hasankatie/programming/my_repos/cpp_repos/shape-game-cpp/FileUtil.cpp.s
+.PHONY : Users/hasankatie/programming/my_repos/cpp_repos/shape-game-cpp/FileUtil.cpp.s
+
 # Help Target
 help:
 	@echo "The following are some of the valid targets for this Makefile:"
@@ -162,6 +189,9 @@ help:
 	@echo "... FileUtil.test.o"
 	@echo "... FileUtil.test.i"
 	@echo "... FileUtil.test.s"
+	@echo "... Users/hasankatie/programming/my_repos/cpp_repos/shape-game-cpp/FileUtil.o"
+	@echo "... Users/hasankatie/programming/my_repos/cpp_repos/shape-game-cpp/FileUtil.i"
+	@echo "... Users/hasankatie/programming/my_repos/cpp_repos/shape-game-cpp/FileUtil.s"
 .PHONY : help
 
 
