--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,3 +1,4 @@
-cmake_minimum_required (VERSION 2.6)
+cmake_minimum_required (VERSION 3.1)
+set (CMAKE_CXX_STANDARD 17)
 project (FileUtilTest)
-add_executable(FileUtil FileUtil.test.cpp)
+add_executable(FileUtil FileUtil.test.cpp ../FileUtil.cpp)
