got the file util tests finally compiled. I forgot to include the source file in the compilation command. Man I'm rusty

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,2 +1,30 @@
+UNAME := $(shell uname -s)
+CXXFLAGS = -std=c++17 -g -Wall
+SRC = $(wildcard *.test.cpp)
+OBJS = $(SRC:.cpp=.o)
+INC_DIR := -I../include
+CXXFLAGS += $(INC_DIR)
+ifeq ($(UNAME),Linux)
+	CXX := c++
+endif
+ifeq ($(UNAME),Darwin)
+	CXX := c++-7
+endif
+
+
 FileUtil:
-	c++-7 FileUtil.test.cpp -I../include -I../ -o FileUtil
+	$(CXX) -o FileUtil ../FileUtil.cpp FileUtil.test.cpp $(INC_DIR) $(LDFLAGS)
+
+# run: all
+# 	./$(EXE)
+
+# main: $(OBJS)
+# 	$(CXX) -o $(EXE) $^ $(LDFLAGS)
+
+
+.PHONY: clean
+clean:
+	@echo "Cleaning..."
+	@rm -f $(OBJS) $(EXE)
+	@rm -rf *.dSYM
+	
