added to gitignore

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required (VERSION 3.3)
 set (CMAKE_CXX_STANDARD 17)
 project (ShapeGameTests)
-add_executable(FileUtil FileUtil.test.cpp ../FileUtil.cpp)
+add_executable(FileUtil.test FileUtil.test.cpp ../FileUtil.cpp)
