added an executable line to cmakefiles.txt

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,3 +2,4 @@ cmake_minimum_required (VERSION 3.3)
 set (CMAKE_CXX_STANDARD 17)
 project (ShapeGameTests)
 add_executable(FileUtil.test FileUtil.test.cpp ../FileUtil.cpp)
+# add_executable(Object.test Object.test.cpp ../Object.cpp)
