wrote stub class for CollisionTree

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,17 +6,10 @@ include_directories(../include)
 add_executable(FileUtil.test FileUtil.test.cpp ../FileUtil.cpp)
 add_executable(Position.test Position.test.cpp ../Position.cpp)
 add_executable(Color.test Color.test.cpp ../Color.cpp)
-add_executable(Object.test Object.test.cpp ../Object.cpp ../Position.cpp)
-add_executable(Shape.test
-							Shape.test.cpp
-							../Shape.cpp
-							../Position.cpp
-							../Object.cpp
-							../Color.cpp)
-add_executable(RenderPackage.test
-							RenderPackage.test.cpp
-							../RenderPackage.cpp
-							../Shape.cpp
-							../Position.cpp
-							../Object.cpp
-							../Color.cpp)
+# add_executable(RenderPackage.test
+# 							RenderPackage.test.cpp
+# 							../RenderPackage.cpp
+# 							../Shape.cpp
+# 							../Position.cpp
+# 							../Object.cpp
+# 							../Color.cpp)
