began implementation of collision tree

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,6 +6,7 @@ include_directories(../include)
 add_executable(FileUtil.test FileUtil.test.cpp ../FileUtil.cpp)
 add_executable(Position.test Position.test.cpp ../Position.cpp)
 add_executable(Color.test Color.test.cpp ../Color.cpp)
+add_executable(CollisionTree.test CollisionTree.test.cpp ../CollisionTree.cpp)
 # add_executable(RenderPackage.test
 # 							RenderPackage.test.cpp
 # 							../RenderPackage.cpp
