Added all needed code to make position set the dirty value

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,10 +3,11 @@ set (CMAKE_CXX_STANDARD 17)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/test_exes)
 project (ShapeGameTests)
 include_directories(../include)
-add_executable(FileUtil.test FileUtil.test.cpp ../FileUtil.cpp)
-add_executable(Position.test Position.test.cpp ../Position.cpp)
-add_executable(Color.test Color.test.cpp ../Color.cpp)
-add_executable(CollisionTree.test CollisionTree.test.cpp ../CollisionTree.cpp)
+add_executable(Object.test Object.test.cpp ../Object.cpp ../Point.cpp ../Position.cpp)
+# add_executable(FileUtil.test FileUtil.test.cpp ../FileUtil.cpp)
+# add_executable(Position.test Position.test.cpp ../Position.cpp)
+# add_executable(Color.test Color.test.cpp ../Color.cpp)
+# add_executable(CollisionTree.test CollisionTree.test.cpp ../CollisionTree.cpp)
 # add_executable(RenderPackage.test
 # 							RenderPackage.test.cpp
 # 							../RenderPackage.cpp
