added a whole bunch of virtual destructors

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -14,7 +14,7 @@ SET(ALL_SRCS
 	../DebugKeyHandler.cpp
 	../Drawable.cpp
 	../FileUtil.cpp
-	../GLHandler.cpp
+	../GLHandlerImpl.cpp
 	../GLRenderObject.cpp
 	../Game.cpp
 	../Globals.cpp
@@ -52,9 +52,9 @@ SET(NO_GLFW_SRCS
 	../Rectangle.cpp
 	../MultiShape.cpp
 )
-# add_executable(Object.test Object.test.cpp ${NO_GLFW_SRCS})
+add_executable(Object.test Object.test.cpp ${NO_GLFW_SRCS})
 # add_executable(Triangle.test Triangle.test.cpp ${NO_GLFW_SRCS})
-add_executable(MultiShape.test MultiShape.test.cpp ${NO_GLFW_SRCS})
+# add_executable(MultiShape.test MultiShape.test.cpp ${NO_GLFW_SRCS})
 # add_executable(MultiShape.test.cpp ${ALL_SRCS})
 # add_executable(FileUtil.test FileUtil.test.cpp ../FileUtil.cpp)
 # add_executable(Position.test Position.test.cpp ../Position.cpp)
